--- a/JUICE-CDF-HF-HK-sample.ipynb
+++ b/JUICE-CDF-HF-HK-sample.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF HK: QL -- 2024/6/26"
+    "# JUICE RPWI HF HK: QL -- 2024/6/30"
    ]
   },
   {
@@ -64,8 +64,8 @@
    "source": [
     "# V1-software\n",
     "date='20230526'\n",
-    "date='20230601'\n",
-    "date='20230712'\n",
+    "#date='20230601'\n",
+    "#date='20230712'\n",
     "\n",
     "# Ground\n",
     "#date='all'\n",
@@ -106,8 +106,11 @@
    "outputs": [],
    "source": [
     "# V2-software\n",
-    "date='20240125'\n",
-    "#date='20240126'"
+    "# date='20240125'\n",
+    "# date='20240126'\n",
+    "\n",
+    "# Ground\n",
+    "# date='HK'"
    ]
   },
   {
@@ -117,12 +120,14 @@
    "outputs": [],
    "source": [
     "# *** Directory set: set by User ***\n",
-    "work_dir = '/Users/user/0-python/JUICE_python/ql/'                      # Plot dump folder\n",
+    "work_dir = '/Users/user/0-python/JUICE_python/ql/'        # Plot dump folder\n",
     "\n",
     "if date[0:2] == '20':\n",
     "    base_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/'\n",
+    "elif date[0:2] == 'HK':\n",
+    "    base_dir = '/Users/user/0-python/JUICE_data/HK/'\n",
     "else:\n",
-    "    base_dir = '/Users/user/0-python/JUICE_data/tmp/'\n",
+    "    base_dir = '/Users/user/0-python/JUICE_data/SYS/'\n",
     "print(base_dir)"
    ]
   },
@@ -141,7 +146,7 @@
    "outputs": [],
    "source": [
     "# HF: 32\n",
-    "if date[0:2] == '20':\n",
+    "if date[0:2] == '20' or date[0:2] == 'HK':\n",
     "    data_hf, err_hf = juice_hk.juice_readhk(date, 'LWYHK00032', base_dir=base_dir)\n",
     "else:\n",
     "    data_hf, err_hf = juice_hk.juice_readhk(date, 'LWY_HK_00032', base_dir=base_dir)\n",
@@ -156,7 +161,8 @@
     "        hk_hf = juice_hk.juice_gethk_hf(data_hf, 1)\n",
     "        err_hf2 = 0\n",
     "    else: \n",
-    "        print(\"==> no HF-HK\")"
+    "        print(\"==> no HF-HK\")\n",
+    "        err_hf2 = 1"
    ]
   },
   {
@@ -166,7 +172,7 @@
    "outputs": [],
    "source": [
     "# DPU: 64\n",
-    "if date[0:2] == '20':\n",
+    "if date[0:2] == '20' or date[0:2] == 'HK':\n",
     "    data_dpu, err_dpu = juice_hk.juice_readhk(date, 'LWYHK00064', base_dir=base_dir)\n",
     "else:\n",
     "    data_dpu, err_dpu = juice_hk.juice_readhk(date, 'LWY_HK_00064', base_dir=base_dir)\n",
@@ -191,7 +197,7 @@
    "outputs": [],
    "source": [
     "# LVPS: 80\n",
-    "if date[0:2] == '20':\n",
+    "if date[0:2] == '20' or date[0:2] == 'HK':\n",
     "    data_lvps, err_lvps = juice_hk.juice_readhk(date, 'LWYHK00080', base_dir=base_dir)\n",
     "else:\n",
     "    data_lvps, err_lvps = juice_hk.juice_readhk(date, 'LWY_HK_00080', base_dir=base_dir)\n",
@@ -256,24 +262,87 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "title_label = 'JUICE/RPWI HF HK ' + date[0:4] + '-' + date[4:6] + '-' + date[6:8]\n",
+    "fig, (ax1, ax2, ax3, ax4, ax5) = plt.subplots(\n",
+    "    5, figsize=(10.0, 12.0), sharex=True)\n",
     "\n",
+    "#-----------------------------------------------------------------\n",
+    "if err_hf == 0:\n",
+    "    ax1.plot(hk_hf.epoch, temp_hf_fpga, '.c', markersize=6, linewidth=0.5, label='HF(FPGA)')\n",
+    "    ax1.plot(hk_hf.epoch, temp_hf_fpga_rev, '.b', markersize=1, linewidth=0.5, label='HF(FPGA) rev')\n",
+    "    #ax1.plot(hk_hf.epoch, temp_hf_fpga_rev2, '.y', linewidth=0.5, label='HF(FPGA) rev2')\n",
+    "if err_dpu == 0:\n",
+    "    ax1.plot(hk_dpu.epoch, hk_dpu.lvps_temp, '.r', markersize=1, label='LVPS(PCB)')\n",
+    "    ax1.plot(hk_dpu.epoch, hk_dpu.hf_temp, '.y', markersize=1, label='HF(PCB)')\n",
+    "    # ax1.plot(hk_dpu.epoch, hk_dpu.dpu_temp, '.k', markersize=1, label='DPU(PCB)')\n",
+    "    # ax1.plot(hk_dpu.epoch, hk_dpu.lp_temp, '.b', markersize=1, label='LP(PCB)')\n",
+    "    # ax1.plot(hk_dpu.epoch, hk_dpu.lf_temp, '.g', markersize=1, label='LF(PCB)')\n",
+    "ax1.set_ylabel('HF Temperature [degC]');  ax1.legend();  ax1.set_title(title_label)\n",
+    "\n",
+    "#-----------------------------------------------------------------\n",
+    "if err_hf == 0:\n",
+    "    ax2.plot(hk_hf.epoch, temp_rwi_ch1, '.c', markersize=6, linewidth=0.5, label='RWI CH1')\n",
+    "    ax2.plot(hk_hf.epoch, temp_rwi_ch2, '.y', markersize=6, linewidth=0.5, label='RWI CH2')\n",
+    "    ax2.plot(hk_hf.epoch, temp_rwi_ch1_rev, '.b', markersize=1, label='RWI CH1 rev')\n",
+    "    ax2.plot(hk_hf.epoch, temp_rwi_ch2_rev, '.r', markersize=1, label='RWI CH2 rev')\n",
+    "    #ax2.plot(hk_hf.epoch, temp_rwi_ch1_rev2, '-g', linewidth=0.5, label='RWI CH1 rev2')\n",
+    "    #ax2.plot(hk_hf.epoch, temp_rwi_ch2_rev2, '-b', linewidth=0.5, label='RWI CH2 rev2')\n",
+    "if err_dpu == 0:\n",
+    "    ax2.plot(hk_dpu.epoch, hk_dpu.scm_temp, '.k', markersize=1, label='SCM')\n",
+    "ax2.set_ylabel('RWI Temperature [degC]');  ax2.legend()\n",
+    "\n",
+    "#-----------------------------------------------------------------\n",
+    "if err_lvps == 0:\n",
+    "    ax3.plot(hk_lvps.epoch, hk_lvps.vol_hf_85, '.g', markersize=1, label='HF 8.5V (LVPS)')\n",
+    "    ax3.plot(hk_lvps.epoch, hk_lvps.vol_hf_33, '.r', markersize=1, label='HF 3.3V (LVPS)')\n",
+    "    ax3.plot(hk_lvps.epoch, hk_lvps.hf_on_off, '.k', markersize=1, label='HF ON/OFF (LVPS)')\n",
+    "    ax4.plot(hk_lvps.epoch, hk_lvps.cur_hf_33, '.r', markersize=1, label='HF 3.3V (LVPS)')\n",
+    "    ax4.plot(hk_lvps.epoch, hk_lvps.cur_hf_85*10, '.g', markersize=1, label='HF 8.5V (LVPS) [x10]')\n",
+    "ax3.set_ylabel('Voltage [V]');  ax3.legend()\n",
+    "ax4.set_ylabel('Current [A]');  ax4.legend()\n",
+    "\n",
+    "#-----------------------------------------------------------------\n",
+    "if err_hf == 0:\n",
+    "    ax5.plot(hk_hf.epoch, hk_hf.heater_ena, '.r', markersize=1, label='Heater ENA')\n",
+    "    ax5.plot(hk_hf.epoch, hk_hf.pol + 0.2, '.g', markersize=1, label='Pol Master/Slave')\n",
+    "    if err_hf2 != 0:\n",
+    "        ax5.plot(hk_hf.epoch, hk_hf.calsig_ena+0.1, '.b', label='Cal signal ENA')\n",
+    "ax5.set_ylabel('HF status');  ax5.legend();  ax5.set_xlabel('UT')\n",
+    "\n",
+    "\"\"\"\n",
+    "print(hk_hf.epoch)\n",
+    "E_min = '2024-01-25 11:00:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
+    "E_max = '2024-01-25 12:10:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  \n",
+    "xlim=[t_min, t_max]\n",
+    "ax1.set_xlim(xlim)\n",
+    "\"\"\"\n",
+    "#-----------------------------------------------------------------\n",
+    "png_fname = work_dir+'RPWI_HF_HK_'+date+'.png'\n",
+    "# fig.savefig(png_fname)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "title_label = 'JUICE/RPWI HF HK ' + date[0:4] + '-' + date[4:6] + '-' + date[6:8]\n",
     "fig, (ax1, ax2, ax3, ax4, ax5, ax6) = plt.subplots(\n",
     "    6, figsize=(10.0, 12.0), sharex=True)\n",
     "\n",
     "#-----------------------------------------------------------------\n",
     "if err_hf == 0:\n",
-    "    ax1.plot(temp_hf_fpga, '.c', markersize=3, linewidth=0.5, label='HF(FPGA)')\n",
-    "    ax1.plot(temp_hf_fpga_rev, '.b', markersize=3, linewidth=0.5, label='HF(FPGA) rev')\n",
+    "    ax1.plot(temp_hf_fpga, '.c', markersize=6, linewidth=0.5, label='HF(FPGA)')\n",
+    "    ax1.plot(temp_hf_fpga_rev, '.b', markersize=1, linewidth=0.5, label='HF(FPGA) rev')\n",
     "    # ax1.plot(temp_hf_fpga_rev2, '.y', label='HF(FPGA) rev2')\n",
     "if err_dpu == 0:\n",
+    "    ax1.plot(hk_dpu.lvps_temp, '.k', markersize=1, label='LVPS(PCB)')\n",
     "    ax1.plot(hk_dpu.hf_temp, '.y', markersize=1, label='HF(PCB)')\n",
-    "    #ax1.plot(hk_dpu.lvps_temp, ':k', markersize=1, label='LVPS(PCB)')\n",
-    "    #ax1.plot(hk_dpu.lp_temp, ':r', markersize=1, label='LP(PCB)')\n",
-    "    #ax1.plot(hk_dpu.lf_temp, ':g', markersize=1, label='LF(PCB)')\n",
-    "ax1.set_ylabel('HF Temperature [degC]')\n",
-    "ax1.legend()\n",
-    "ax1.set_title(title_label)\n",
+    "    #ax1.plot(hk_dpu.dpu_temp, '.y', markersize=1, label='DPU(PCB)')\n",
+    "    #ax1.plot(hk_dpu.lp_temp, '.r', markersize=1, label='LP(PCB)')\n",
+    "    #ax1.plot(hk_dpu.lf_temp, '.g', markersize=1, label='LF(PCB)')\n",
+    "ax1.set_ylabel('HF Temperature [degC]');  ax1.legend();  ax1.set_title(title_label)\n",
     "\n",
     "#-----------------------------------------------------------------\n",
     "if err_hf == 0:\n",
@@ -284,34 +353,26 @@
     "    # ax2.plot(temp_rwi_ch1_rev2, '-g', linewidth=0.5, label='RWI CH1 rev2')\n",
     "    # ax2.plot(temp_rwi_ch2_rev2, '-b', linewidth=0.5, label='RWI CH2 rev2')\n",
     "if err_dpu == 0:\n",
-    "    ax2.plot(hk_dpu.scm_temp, ':k', label='SCM')\n",
-    "ax2.set_ylabel('RWI Temperature [degC]')\n",
-    "ax2.legend()\n",
+    "    ax2.plot(hk_dpu.scm_temp, '.k', markersize=1, label='SCM')\n",
+    "ax2.set_ylabel('RWI Temperature [degC]');  ax2.legend()\n",
     "\n",
     "#-----------------------------------------------------------------\n",
     "if err_lvps == 0:\n",
-    "    ax3.plot(hk_lvps.vol_hf_33, '.r', label='HF 3.3V (LVPS)')\n",
-    "    ax3.plot(hk_lvps.vol_hf_85, '.g', label='HF 8.5V (LVPS)')\n",
-    "    ax3.plot(hk_lvps.hf_on_off, '.k', label='HF ON/OFF (LVPS)')\n",
-    "ax3.set_ylabel('Voltage [V]')\n",
-    "ax3.legend()\n",
-    "\n",
-    "#-----------------------------------------------------------------\n",
-    "if err_lvps == 0:\n",
-    "    ax4.plot(hk_lvps.cur_hf_33, '.r', label='HF 3.3V (LVPS)')\n",
-    "    ax4.plot(hk_lvps.cur_hf_85*10, '.g', label='HF 8.5V (LVPS) [x10]')\n",
-    "\n",
-    "ax4.set_ylabel('Current [A]')\n",
-    "ax4.legend()\n",
+    "    ax3.plot(hk_lvps.vol_hf_85, '.g', markersize=1, label='HF 8.5V (LVPS)')\n",
+    "    ax3.plot(hk_lvps.vol_hf_33, '.r', markersize=1, label='HF 3.3V (LVPS)')\n",
+    "    ax3.plot(hk_lvps.hf_on_off, '.k', markersize=1, label='HF ON/OFF (LVPS)')\n",
+    "    ax4.plot(hk_lvps.cur_hf_33, '.r', markersize=1, label='HF 3.3V (LVPS)')\n",
+    "    ax4.plot(hk_lvps.cur_hf_85*10, '.g', markersize=1, label='HF 8.5V (LVPS) [x10]')\n",
+    "ax3.set_ylabel('Voltage [V]');  ax3.legend()\n",
+    "ax4.set_ylabel('Current [A]');  ax4.legend()\n",
     "\n",
     "#-----------------------------------------------------------------\n",
     "if err_hf == 0:\n",
-    "    ax5.plot(hk_hf.heater_ena, '.r', label='Heater ENA')\n",
-    "    ax5.plot(hk_hf.pol + 0.2, '.g', label='Pol Master/Slave')\n",
+    "    ax5.plot(hk_hf.heater_ena, '.r', markersize=1, label='Heater ENA')\n",
+    "    ax5.plot(hk_hf.pol + 0.2, '.g', markersize=1, label='Pol Master/Slave')\n",
     "    if err_hf2 != 0:\n",
-    "        ax5.plot(hk_hf.calsig_ena+0.1, '.b', label='Cal signal ENA')\n",
-    "ax5.set_ylabel('HF status')\n",
-    "ax5.legend()\n",
+    "        ax5.plot(hk_hf.calsig_ena+0.1, '.b', markersize=1, label='Cal signal ENA')\n",
+    "ax5.set_ylabel('HF status');  ax5.legend()\n",
     "\n",
     "#-----------------------------------------------------------------\n",
     "if err_hf == 0:\n",
@@ -320,8 +381,7 @@
     "    ax6.plot(hk_dpu.epoch, '.g', label='DPU');  \n",
     "if err_lvps == 0:\n",
     "    ax6.plot(hk_lvps.epoch, '.b', label='LVPS')\n",
-    "ax6.set_ylabel('Epoch')\n",
-    "ax6.legend()\n",
+    "ax6.set_ylabel('Epoch');  ax6.legend()\n",
     "\n",
     "# range: X-axis\n",
     "\"\"\"\n",
@@ -335,102 +395,7 @@
     "\n",
     "#-----------------------------------------------------------------\n",
     "png_fname = work_dir+'RPWI_HF_HK_'+date+'.png'\n",
-    "fig.savefig(png_fname)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "title_label = 'JUICE/RPWI HF HK ' + date[0:4] + '-' + date[4:6] + '-' + date[6:8]\n",
-    "fig, (ax1, ax2, ax3, ax4, ax5) = plt.subplots(\n",
-    "    5, figsize=(10.0, 12.0), sharex=True)\n",
-    "\n",
-    "#-----------------------------------------------------------------\n",
-    "if err_hf == 0:\n",
-    "    ax1.plot(hk_hf.epoch, temp_hf_fpga, '.c', markersize=3, linewidth=0.5, label='HF(FPGA)')\n",
-    "    ax1.plot(hk_hf.epoch, temp_hf_fpga_rev, '.b', markersize=3, linewidth=0.5, label='HF(FPGA) rev')\n",
-    "    #ax1.plot(hk_hf.epoch, temp_hf_fpga_rev2, '.y', linewidth=0.5, label='HF(FPGA) rev2')\n",
-    "if err_dpu == 0:\n",
-    "    ax1.plot(hk_dpu.epoch, hk_dpu.hf_temp, '.y', markersize=1, label='HF(PCB)')\n",
-    "    # ax1.plot(hk_dpu.epoch, hk_dpu.lvps_temp, '.k', markersize=1000, label='LVPS(PCB)')\n",
-    "    # ax1.plot(hk_dpu.epoch, hk_dpu.lp_temp, '.r', markersize=1000, label='LP(PCB)')\n",
-    "    # ax1.plot(hk_dpu.epoch, hk_dpu.lf_temp, '.g', markersize=1000, label='LF(PCB)')\n",
-    "\n",
-    "ax1.set_ylabel('HF Temperature [degC]')\n",
-    "ax1.legend()\n",
-    "ax1.set_title(title_label)\n",
-    "\n",
-    "#-----------------------------------------------------------------\n",
-    "if err_hf == 0:\n",
-    "    ax2.plot(hk_hf.epoch, temp_rwi_ch1, '.c', markersize=3, linewidth=0.5, label='RWI CH1')\n",
-    "    ax2.plot(hk_hf.epoch, temp_rwi_ch2, '.y', markersize=3, linewidth=0.5, label='RWI CH2')\n",
-    "    ax2.plot(hk_hf.epoch, temp_rwi_ch1_rev, '.b', markersize=1, label='RWI CH1 rev')\n",
-    "    ax2.plot(hk_hf.epoch, temp_rwi_ch2_rev, '.r', markersize=1, label='RWI CH2 rev')\n",
-    "    #ax2.plot(hk_hf.epoch, temp_rwi_ch1_rev2, '-g', linewidth=0.5, label='RWI CH1 rev2')\n",
-    "    #ax2.plot(hk_hf.epoch, temp_rwi_ch2_rev2, '-b', linewidth=0.5, label='RWI CH2 rev2')\n",
-    "\n",
-    "if err_dpu == 0:\n",
-    "    ax2.plot(hk_dpu.epoch, hk_dpu.scm_temp, ':k', label='SCM')\n",
-    "ax2.set_ylabel('RWI Temperature [degC]')\n",
-    "ax2.legend()\n",
-    "\n",
-    "#-----------------------------------------------------------------\n",
-    "if err_lvps == 0:\n",
-    "    ax3.plot(hk_lvps.epoch, hk_lvps.vol_hf_33, '.r', label='HF 3.3V (LVPS)')\n",
-    "    ax3.plot(hk_lvps.epoch, hk_lvps.vol_hf_85, '.g', label='HF 8.5V (LVPS)')\n",
-    "    ax3.plot(hk_lvps.epoch, hk_lvps.hf_on_off, '.k', label='HF ON/OFF (LVPS)')\n",
-    "ax3.set_ylabel('Voltage [V]')\n",
-    "ax3.legend()\n",
-    "\n",
-    "#-----------------------------------------------------------------\n",
-    "if err_lvps == 0:\n",
-    "    ax4.plot(hk_lvps.epoch, hk_lvps.cur_hf_33, '.r', label='HF 3.3V (LVPS)')\n",
-    "    ax4.plot(hk_lvps.epoch, hk_lvps.cur_hf_85*10, '.g', label='HF 8.5V (LVPS) [x10]')\n",
-    "\n",
-    "ax4.set_ylabel('Current [A]')\n",
-    "ax4.legend()\n",
-    "\n",
-    "#-----------------------------------------------------------------\n",
-    "if err_hf == 0:\n",
-    "    ax5.plot(hk_hf.epoch, hk_hf.heater_ena, '.r', label='Heater ENA')\n",
-    "    ax5.plot(hk_hf.epoch, hk_hf.pol + 0.2, '.g', label='Pol Master/Slave')\n",
-    "    if err_hf2 != 0:\n",
-    "        ax5.plot(hk_hf.epoch, hk_hf.calsig_ena+0.1, '.b', label='Cal signal ENA')\n",
-    "\n",
-    "ax5.set_ylabel('HF status')\n",
-    "ax5.legend()\n",
-    "ax5.set_xlabel('UT')\n",
-    "\n",
-    "print(hk_hf.epoch)\n",
-    "E_min = '2024-01-25 11:00:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
-    "E_max = '2024-01-25 12:10:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  \n",
-    "xlim=[t_min, t_max]\n",
-    "ax1.set_xlim(xlim)\n",
-    "\"\"\"\n",
-    "\"\"\"\n",
-    "#-----------------------------------------------------------------\n",
-    "png_fname = work_dir+'RPWI_HF_HK_'+date+'.png'\n",
     "# fig.savefig(png_fname)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t = 10000\n",
-    "print (hk_hf.temp_hf_fpga[t:t+10])\n",
-    "print (hk_hf.temp_hf_fpga_rev[t:t+10])\n",
-    "\"\"\"\n",
-    "print(hk_dpu.lvps_temp[t:t+10])\n",
-    "print(hk_dpu.hf_temp[t:t+10])\n",
-    "print(hk_dpu.lp_temp[t:t+10])\n",
-    "print(hk_dpu.lf_temp[t:t+10])\n",
-    "\"\"\""
    ]
   }
  ],
