--- a/JUICE-CDF-HF-HK-sample.ipynb
+++ b/JUICE-CDF-HF-HK-sample.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF HK: QL -- 2024/6/30"
+    "# JUICE RPWI HF HK: QL -- 2024/7/3"
    ]
   },
   {
@@ -63,7 +63,7 @@
    "outputs": [],
    "source": [
     "# V1-software\n",
-    "date='20230526'\n",
+    "#date='20230526'\n",
     "#date='20230601'\n",
     "#date='20230712'\n",
     "\n",
@@ -108,6 +108,8 @@
     "# V2-software\n",
     "# date='20240125'\n",
     "# date='20240126'\n",
+    "date='20240701'\n",
+    "date='20240702'\n",
     "\n",
     "# Ground\n",
     "# date='HK'"
@@ -268,7 +270,7 @@
     "\n",
     "#-----------------------------------------------------------------\n",
     "if err_hf == 0:\n",
-    "    ax1.plot(hk_hf.epoch, temp_hf_fpga, '.c', markersize=6, linewidth=0.5, label='HF(FPGA)')\n",
+    "    # ax1.plot(hk_hf.epoch, temp_hf_fpga, '.c', markersize=6, linewidth=0.5, label='HF(FPGA)')\n",
     "    ax1.plot(hk_hf.epoch, temp_hf_fpga_rev, '.b', markersize=1, linewidth=0.5, label='HF(FPGA) rev')\n",
     "    #ax1.plot(hk_hf.epoch, temp_hf_fpga_rev2, '.y', linewidth=0.5, label='HF(FPGA) rev2')\n",
     "if err_dpu == 0:\n",
@@ -281,8 +283,8 @@
     "\n",
     "#-----------------------------------------------------------------\n",
     "if err_hf == 0:\n",
-    "    ax2.plot(hk_hf.epoch, temp_rwi_ch1, '.c', markersize=6, linewidth=0.5, label='RWI CH1')\n",
-    "    ax2.plot(hk_hf.epoch, temp_rwi_ch2, '.y', markersize=6, linewidth=0.5, label='RWI CH2')\n",
+    "    # ax2.plot(hk_hf.epoch, temp_rwi_ch1, '.c', markersize=6, linewidth=0.5, label='RWI CH1')\n",
+    "    # ax2.plot(hk_hf.epoch, temp_rwi_ch2, '.y', markersize=6, linewidth=0.5, label='RWI CH2')\n",
     "    ax2.plot(hk_hf.epoch, temp_rwi_ch1_rev, '.b', markersize=1, label='RWI CH1 rev')\n",
     "    ax2.plot(hk_hf.epoch, temp_rwi_ch2_rev, '.r', markersize=1, label='RWI CH2 rev')\n",
     "    #ax2.plot(hk_hf.epoch, temp_rwi_ch1_rev2, '-g', linewidth=0.5, label='RWI CH1 rev2')\n",
@@ -317,8 +319,8 @@
     "ax1.set_xlim(xlim)\n",
     "\"\"\"\n",
     "#-----------------------------------------------------------------\n",
-    "png_fname = work_dir+'RPWI_HF_HK_'+date+'.png'\n",
-    "# fig.savefig(png_fname)"
+    "png_fname = work_dir+'JUICE_RPWI_HF_HK_'+date+'.png'\n",
+    "fig.savefig(png_fname)"
    ]
   },
   {
@@ -394,7 +396,7 @@
     "\"\"\"\n",
     "\n",
     "#-----------------------------------------------------------------\n",
-    "png_fname = work_dir+'RPWI_HF_HK_'+date+'.png'\n",
+    "png_fname = work_dir+'JUICE_RPWI_HF_HK_'+date+'.png'\n",
     "# fig.savefig(png_fname)"
    ]
   }
