--- a/JUICE-CDF-HF-SID2_sample.ipynb
+++ b/JUICE-CDF-HF-SID2_sample.ipynb
@@ -82,7 +82,7 @@
     "# *** CAL set ***\n",
     "band_mode = 0                           # [Power]      0: sum      1: /Hz\n",
     "unit_mode = 0                           # [Power]      0: raw      1: dBm＠ADC  2: V@HF   3:V2@HF   4:V2@RWI\n",
-    "cal_mode = 0                            # [Power]      0: background     1: CAL     2; all\n",
+    "cal_mode = 2                            # [Power]      0: background     1: CAL     2; all\n",
     "\n",
     "# *** Unit set ***\n",
     "f_mode = 1                              # [Frequency]  0: linear   1:log  in frequency\n",
@@ -147,17 +147,21 @@
     "                 ]\n",
     "\n",
     "# 202401 -- ErrorCheck\n",
-    "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202401_FS/cdf/'    # 202312_FS test folder\n",
-    "data_name_list = [#'JUICE_L1a_RPWI-HF-SID2_FSW1_1F_0_jumps.bin.cdf',\n",
-    "                  #'JUICE_L1a_RPWI-HF-SID2_FSW1_1F_21_no_jump.bin.cdf',\n",
-    "                  'JUICE_L1a_RPWI-HF-SID2_high.cdf',\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202401_FS/cdf/'  # 202312_FS test folder\n",
+    "data_name_list = ['JUICE_L1a_RPWI-HF-SID2_FSW1_1F_0_jumps.bin.cdf',     # Num-Frequency: 512    Length: 32      Frequency, width, step (kHz): 80.0 - 45000.0 111.9768 87.90607\n",
+    "                  #'JUICE_L1a_RPWI-HF-SID2_FSW1_1F_21_no_jump.bin.cdf', # Num-Frequency: 512    Length: 32      Frequency, width, step (kHz): 80.0 - 45000.0 111.9768 87.90607\n",
+    "                  #'JUICE_L1a_RPWI-HF-SID2_high.cdf',                   # Num-Frequency: 192    Length: 512     Frequency, width, step (kHz): 210.0 - 42421.0 222.0 221.0\n",
     "                 ]\n",
     "\"\"\"\n",
     "\n",
+    "\"\"\"\n",
+    "# ***** Following is similar to the latest operation, except the highest frequency setting. *****\n",
     "# 202405 -- dryrun check\n",
-    "data_dir = '/Users/user/0-python/JUICE_data/CCSDS_test_v2/test_TMIDX/2405_dryrun_test/1_first_parts/'   # 202312_FS test folder\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/CCSDS_test_v2/test_TMIDX/2405_dryrun_test/1_first_parts/'\n",
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID2_20000108T044504-20000108T044719_V01___TMIDX_00000.bin.cdf',   # pc2_rpwi_hf_fft_sid2_2024_05_15_14_41_35\n",
-    "                 ]\n"
+    "                                                                        # Num-Frequency: 202    Length: 128     Frequency, width, step (kHz): 191.0 - 44813.0 222.0 222.0\n",
+    "                 ]\n",
+    "\"\"\"\n"
    ]
   },
   {
@@ -570,6 +574,18 @@
     "    fig.savefig(png_fname)\n",
     "\n",
     "# print(data.T_HF_FPGA, data.T_RWI_CH1, data.T_RWI_CH2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "000a8c96",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#print(data.frequency)\n",
+    "print(data.freq_step)\n",
+    "#print(data.freq_width)"
    ]
   },
   {
@@ -2450,7 +2466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.1.-1"
   }
  },
  "nbformat": 4,
