--- a/JUICE-CDF-HF-SID3_sample.ipynb
+++ b/JUICE-CDF-HF-SID3_sample.ipynb
@@ -6,7 +6,7 @@
    "id": "a116756d",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID3 (Full): L1a QL -- 2024/5/19"
+    "# JUICE RPWI HF SID3 (Full): L1a QL -- 2024/7/4"
    ]
   },
   {
@@ -74,15 +74,15 @@
     "# *** Mode set ***\n",
     "band_mode = 0                           # 0: sum    1: /Hz\n",
     "unit_mode = 0                           # 0: raw    1: dBm＠ADC  2: V@HF   3:V2@HF   4:V2@RWI\n",
-    "f_mode = 0                              # 0: linear   1:log  in frequency\n",
+    "f_mode = 1                              # 0: linear   1:log  in frequency\n",
     "dump_mode = 1                           # 0: no-dump  1:plot dump\n",
     "#\n",
-    "time_mode = 1                           # 0: Epoch    1: data number\n",
+    "time_mode = 0                           # 0: Epoch    1: data number\n",
     "\n",
     "# *** Parameter set ***\n",
-    "cal = 1                                 # 0: background     1: CAL\n",
-    "p_raw_max = 8.5                         # background: 7.5   CAL: 10\n",
-    "p_raw_min = 1.0                         # background: 2.5   CAL: 5\n",
+    "cal = 2                                 # 0: background     1: CAL\n",
+    "p_raw_max = 9.5                         # background: 7.5   CAL: 10\n",
+    "p_raw_min = 2.0                         # background: 2.5   CAL: 5\n",
     "\n",
     "# *** Frenquency range set ***\n",
     "f_mode_min = 800                        # 80\n",
@@ -105,6 +105,7 @@
    "source": [
     "# *** Ground - Ver.2 ***\n",
     "\"\"\"\n",
+    "\"\"\"\n",
     "# 202310 -- SAMPLE\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'        # CDF data folder\n",
     "data_name_list = ['SID03_20231024-0036.cdf']\n",
@@ -116,6 +117,7 @@
     "data_name_list = ['SID03-3ch-comp2-20231117-1429.cdf']\n",
     "data_name_list = ['SID03-3ch-comp3-20231117-1432.cdf']\n",
     "\n",
+    "\"\"\"\n",
     "# 202310 -- FS\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202311_FS/cdf/'        # CDF data folder\n",
     "data_name_list = ['SID03_Seq03.cdf']\n",
@@ -193,14 +195,14 @@
     "# COMP-1\n",
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20000108T074511-20000108T074711_V01___TMIDX_00000.bin.cdf',  # pc2_EGA-dryrun_RPW-SEQ-12j_2024_05_15_17_41_59\n",
     "                 ]\n",
-    "\"\"\"\n",
     "\n",
     "# 202406 -- dryrun check\n",
     "# TEST\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202406_EM3/cdf/'\n",
     "# COMP1->2, 2->1\n",
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20240614T161148-20240614T162539_V01___TMIDX_00000.bin.cdf',  \n",
-    "                                   ]\n"
+    "                                   ]\n",
+    "\"\"\""
    ]
   },
   {
@@ -211,11 +213,18 @@
    "outputs": [],
    "source": [
     "# *** Flight data: Ver.2 ***\n",
-    "# 20240126\n",
     "\"\"\"\n",
+    "# 20240126\n",
     "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2024/01/26/'        # CDF data folder\n",
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20240126T083835_V01.cdf',\n",
     "                 ]\n",
+    "\"\"\"\n",
+    "\n",
+    "# 20240701\n",
+    "data_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/2024/07/01/'        # CDF data folder\n",
+    "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20240701T011127_V01.cdf',\n",
+    "                 ]\n",
+    "\"\"\"\n",
     "\"\"\""
    ]
   },
@@ -551,6 +560,7 @@
     "ax8.plot(np.ravel(data.T_RWI_CH1),  ':b', label='T (RWI1)')\n",
     "ax8.plot(np.ravel(data.T_RWI_CH2),  ':g', label='T (RWI2)')\n",
     "ax8.plot(np.ravel(data.cal_signal*10), '-k', label='CAL')\n",
+    "ax8.plot(np.ravel(data.onboard_cal*15), '-r', label='Onboard-CAL')\n",
     "ax8.plot(np.ravel(data.RFI_rejection*10+2), '_b', label='RFI')\n",
     "ax8.plot(np.ravel(data.complex*10+4), '_r', label='comp')\n",
     "ax9.plot(np.ravel(data.epoch), '.')\n",
@@ -647,9 +657,7 @@
     "fig.show\n",
     "if dump_mode == 1:\n",
     "    png_fname = work_dir+data_name+'_raw.png'\n",
-    "    fig.savefig(png_fname)\n",
-    "\n",
-    "# print(data.T_HF_FPGA, data.T_RWI_CH1, data.T_RWI_CH2)"
+    "    fig.savefig(png_fname)"
    ]
   },
   {
@@ -659,7 +667,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# print(data.epoch)"
+    "print(data.epoch)\n",
+    "print(data.T_HF_FPGA, data.T_RWI_CH1, data.T_RWI_CH2)"
    ]
   },
   {
@@ -1190,7 +1199,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.-1"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
