--- a/JUICE-CDF-HF-HK-sample.ipynb
+++ b/JUICE-CDF-HF-HK-sample.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF HK: QL -- 2024/7/3"
+    "# JUICE RPWI HF HK: QL -- 2024/7/9"
    ]
   },
   {
@@ -108,8 +108,9 @@
     "# V2-software\n",
     "# date='20240125'\n",
     "# date='20240126'\n",
-    "date='20240701'\n",
-    "date='20240702'\n",
+    "# date='20240701'\n",
+    "# date='20240702'\n",
+    "date='20240706'\n",
     "\n",
     "# Ground\n",
     "# date='HK'"
@@ -271,11 +272,11 @@
     "#-----------------------------------------------------------------\n",
     "if err_hf == 0:\n",
     "    # ax1.plot(hk_hf.epoch, temp_hf_fpga, '.c', markersize=6, linewidth=0.5, label='HF(FPGA)')\n",
-    "    ax1.plot(hk_hf.epoch, temp_hf_fpga_rev, '.b', markersize=1, linewidth=0.5, label='HF(FPGA) rev')\n",
+    "    ax1.plot(hk_hf.epoch, temp_hf_fpga_rev, '.b', markersize=5, linewidth=0.5, label='HF(FPGA) rev')\n",
     "    #ax1.plot(hk_hf.epoch, temp_hf_fpga_rev2, '.y', linewidth=0.5, label='HF(FPGA) rev2')\n",
     "if err_dpu == 0:\n",
     "    ax1.plot(hk_dpu.epoch, hk_dpu.lvps_temp, '.r', markersize=1, label='LVPS(PCB)')\n",
-    "    ax1.plot(hk_dpu.epoch, hk_dpu.hf_temp, '.y', markersize=1, label='HF(PCB)')\n",
+    "    ax1.plot(hk_dpu.epoch, hk_dpu.hf_temp, '.y', markersize=5, label='HF(PCB)')\n",
     "    # ax1.plot(hk_dpu.epoch, hk_dpu.dpu_temp, '.k', markersize=1, label='DPU(PCB)')\n",
     "    # ax1.plot(hk_dpu.epoch, hk_dpu.lp_temp, '.b', markersize=1, label='LP(PCB)')\n",
     "    # ax1.plot(hk_dpu.epoch, hk_dpu.lf_temp, '.g', markersize=1, label='LF(PCB)')\n",
@@ -285,8 +286,8 @@
     "if err_hf == 0:\n",
     "    # ax2.plot(hk_hf.epoch, temp_rwi_ch1, '.c', markersize=6, linewidth=0.5, label='RWI CH1')\n",
     "    # ax2.plot(hk_hf.epoch, temp_rwi_ch2, '.y', markersize=6, linewidth=0.5, label='RWI CH2')\n",
-    "    ax2.plot(hk_hf.epoch, temp_rwi_ch1_rev, '.b', markersize=1, label='RWI CH1 rev')\n",
-    "    ax2.plot(hk_hf.epoch, temp_rwi_ch2_rev, '.r', markersize=1, label='RWI CH2 rev')\n",
+    "    ax2.plot(hk_hf.epoch, temp_rwi_ch1_rev, '.b', markersize=5, label='RWI CH1 rev')\n",
+    "    ax2.plot(hk_hf.epoch, temp_rwi_ch2_rev, '.r', markersize=5, label='RWI CH2 rev')\n",
     "    #ax2.plot(hk_hf.epoch, temp_rwi_ch1_rev2, '-g', linewidth=0.5, label='RWI CH1 rev2')\n",
     "    #ax2.plot(hk_hf.epoch, temp_rwi_ch2_rev2, '-b', linewidth=0.5, label='RWI CH2 rev2')\n",
     "if err_dpu == 0:\n",
@@ -335,12 +336,12 @@
     "\n",
     "#-----------------------------------------------------------------\n",
     "if err_hf == 0:\n",
-    "    ax1.plot(temp_hf_fpga, '.c', markersize=6, linewidth=0.5, label='HF(FPGA)')\n",
-    "    ax1.plot(temp_hf_fpga_rev, '.b', markersize=1, linewidth=0.5, label='HF(FPGA) rev')\n",
+    "    # ax1.plot(temp_hf_fpga, '.c', markersize=6, linewidth=0.5, label='HF(FPGA)')\n",
+    "    ax1.plot(temp_hf_fpga_rev, '.b', markersize=5, linewidth=0.5, label='HF(FPGA) rev')\n",
     "    # ax1.plot(temp_hf_fpga_rev2, '.y', label='HF(FPGA) rev2')\n",
     "if err_dpu == 0:\n",
     "    ax1.plot(hk_dpu.lvps_temp, '.k', markersize=1, label='LVPS(PCB)')\n",
-    "    ax1.plot(hk_dpu.hf_temp, '.y', markersize=1, label='HF(PCB)')\n",
+    "    ax1.plot(hk_dpu.hf_temp, '.y', markersize=5, label='HF(PCB)')\n",
     "    #ax1.plot(hk_dpu.dpu_temp, '.y', markersize=1, label='DPU(PCB)')\n",
     "    #ax1.plot(hk_dpu.lp_temp, '.r', markersize=1, label='LP(PCB)')\n",
     "    #ax1.plot(hk_dpu.lf_temp, '.g', markersize=1, label='LF(PCB)')\n",
@@ -348,10 +349,10 @@
     "\n",
     "#-----------------------------------------------------------------\n",
     "if err_hf == 0:\n",
-    "    ax2.plot(temp_rwi_ch1, '.c', markersize=3, linewidth=0.5, label='RWI CH1')\n",
-    "    ax2.plot(temp_rwi_ch2, '.y', markersize=3, linewidth=0.5, label='RWI CH2')\n",
-    "    ax2.plot(temp_rwi_ch1_rev, '.b', markersize=1, label='RWI CH1 rev')\n",
-    "    ax2.plot(temp_rwi_ch2_rev, '.r', markersize=1, label='RWI CH2 rev')\n",
+    "    # ax2.plot(temp_rwi_ch1, '.c', markersize=3, linewidth=0.5, label='RWI CH1')\n",
+    "    # ax2.plot(temp_rwi_ch2, '.y', markersize=3, linewidth=0.5, label='RWI CH2')\n",
+    "    ax2.plot(temp_rwi_ch1_rev, '.b', markersize=5, label='RWI CH1 rev')\n",
+    "    ax2.plot(temp_rwi_ch2_rev, '.r', markersize=5, label='RWI CH2 rev')\n",
     "    # ax2.plot(temp_rwi_ch1_rev2, '-g', linewidth=0.5, label='RWI CH1 rev2')\n",
     "    # ax2.plot(temp_rwi_ch2_rev2, '-b', linewidth=0.5, label='RWI CH2 rev2')\n",
     "if err_dpu == 0:\n",
