--- a/JUICE-CDF-HF-SID2_sample.ipynb
+++ b/JUICE-CDF-HF-SID2_sample.ipynb
@@ -154,13 +154,13 @@
     "                 ]\n",
     "\"\"\"\n",
     "\n",
-    "\"\"\"\n",
     "# ***** Following is similar to the latest operation, except the highest frequency setting. *****\n",
     "# 202405 -- dryrun check\n",
     "data_dir = '/Users/user/0-python/JUICE_data/CCSDS_test_v2/test_TMIDX/2405_dryrun_test/1_first_parts/'\n",
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID2_20000108T044504-20000108T044719_V01___TMIDX_00000.bin.cdf',   # pc2_rpwi_hf_fft_sid2_2024_05_15_14_41_35\n",
     "                                                                        # Num-Frequency: 202    Length: 128     Frequency, width, step (kHz): 191.0 - 44813.0 222.0 222.0\n",
     "                 ]\n",
+    "\"\"\"\n",
     "\"\"\"\n"
    ]
   },
@@ -172,12 +172,12 @@
    "outputs": [],
    "source": [
     "# *** Flight data: Ver.2 ***\n",
-    "\"\"\"\n",
     "# 20240126\n",
     "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2024/01/25/'        # CDF data folder\n",
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID2_20240125T112327_V01.cdf',      # 128\n",
     "                  #'JUICE_L1a_RPWI-HF-SID2_20240125T152238_V01.cdf',      # 512\n",
     "                 ]\n",
+    "\"\"\"\n",
     "\"\"\""
    ]
   },
@@ -574,18 +574,6 @@
     "    fig.savefig(png_fname)\n",
     "\n",
     "# print(data.T_HF_FPGA, data.T_RWI_CH1, data.T_RWI_CH2)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "000a8c96",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#print(data.frequency)\n",
-    "print(data.freq_step)\n",
-    "#print(data.freq_width)"
    ]
   },
   {
@@ -2466,7 +2454,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.-1"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
