--- a/JUICE-CDF-HF-SID20_sample.ipynb
+++ b/JUICE-CDF-HF-SID20_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID20 (Burst rich): L1a QL -- 2024/5/19"
+    "# JUICE RPWI HF SID20 (Burst rich): L1a QL -- 2024/7/9"
    ]
   },
   {
@@ -153,7 +153,12 @@
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID20_20240126T113714_V01.cdf',\n",
     "                  'JUICE_L1a_RPWI-HF-SID20_20240126T114800_V01.cdf',\n",
     "                  ]\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "\n",
+    "# 202407 -- CO2\n",
+    "data_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/2024/07/06/'        # CDF data folder\n",
+    "data_name_list = ['JUICE_L1a_RPWI-HF-SID20_20240706T121424_V01.cdf',\n",
+    "                 ]"
    ]
   },
   {
@@ -974,7 +979,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
