--- a/JUICE-CDF-HF-SID23_sample.ipynb
+++ b/JUICE-CDF-HF-SID23_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID23 (PSSR3 rich): L1a QL -- 2024/5/19"
+    "# JUICE RPWI HF SID23 (PSSR3 rich): L1a QL -- 2024/7/9"
    ]
   },
   {
@@ -158,7 +158,13 @@
     "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2024/01/26/'        # CDF data folder\n",
     "data_name = 'JUICE_L1a_RPWI-HF-SID23_20240126T092930_V01.cdf'\n",
     "data_name = 'JUICE_L1a_RPWI-HF-SID23_20240126T094802_V01.cdf'\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "\n",
+    "# 202407 -- CO2\n",
+    "data_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/2024/07/06/'        # CDF data folder\n",
+    "data_name = 'JUICE_L1a_RPWI-HF-SID23_20240706T023200_V01.cdf'\n",
+    "data_name = 'JUICE_L1a_RPWI-HF-SID23_20240706T124753_V01.cdf'\n",
+    "data_name = 'JUICE_L1a_RPWI-HF-SID23_20240706T130407_V01.cdf'"
    ]
   },
   {
@@ -275,7 +281,7 @@
    "outputs": [],
    "source": [
     "n_sweep = np.int16(n_time0/2)\n",
-    "n_sweep = n_time0-4\n",
+    "# n_sweep = n_time0-4\n",
     "n_block = n_block0\n",
     "print(\"[specific sweep]  SWEEP:\", n_sweep, \"in total of\", n_time0, \"   Block:\", n_block, \"in total of\", data.N_block[0])\n",
     "\n",
@@ -327,7 +333,7 @@
    "outputs": [],
    "source": [
     "n_sweep = np.int16(n_time0/2)\n",
-    "n_sweep = n_time0-4\n",
+    "# n_sweep = n_time0-4\n",
     "n_block = 1\n",
     "print(\"[specific block]  SWEEP:\", n_sweep, \"in total of \", n_time0, \"   Block:\", n_block, \"in total of \", data.N_block[0])\n",
     "\n",
@@ -346,13 +352,11 @@
     "title_label = '[JUICE/RPWI HF PSSR3-Rich (SID-23)]  ' + data_name + \"  [\" + date1 + \"]\";  ax1.set_title(title_label)\n",
     "ax1.legend(loc='upper right', fontsize=8);  ax3.legend(loc='upper right', fontsize=8);  ax5.legend(loc='upper right', fontsize=8)\n",
     "\n",
+    "\"\"\"\n",
     "# range: X-axis\n",
-    "\"\"\"\n",
-    "xlim=[0, 0.001]\n",
+    "xlim=[0, 0.0002]\n",
     "ax1.set_xlim(xlim);  ax3.set_xlim(xlim);  ax5.set_xlim(xlim);  ax7.set_xlim(xlim)\n",
-    "\"\"\"\n",
     "# range: Y-axis\n",
-    "\"\"\"\n",
     "ylim=[-10**(p_raw_max-3.5), 10**(p_raw_max-3.5)]\n",
     "ax1.set_ylim(ylim);  ax3.set_ylim(ylim);  ax5.set_ylim(ylim)\n",
     "\"\"\"\n",
@@ -388,7 +392,9 @@
     "d_freq = spec.freq[1]-spec.freq[0]\n",
     "\n",
     "print(spec.EE.shape, n_time0, n_block0, n_length0)\n",
-    "print(f_min, \"kHz -\", f_max, \"kHz  (Center:\", data.freq_center[0], \"kHz  df:\", d_freq, \"kHz\")"
+    "print(f_min, \"kHz -\", f_max, \"kHz  (Center:\", data.freq_center[0], \"kHz  df:\", d_freq, \"kHz\")\n",
+    "\n",
+    "print(data.freq_center)"
    ]
   },
   {
@@ -866,7 +872,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
