--- a/JUICE-CDF-HF-SID3_sample.ipynb
+++ b/JUICE-CDF-HF-SID3_sample.ipynb
@@ -6,7 +6,7 @@
    "id": "a116756d",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID3 (Full): L1a QL -- 2024/7/4"
+    "# JUICE RPWI HF SID3 (Full): L1a QL -- 2024/7/9"
    ]
   },
   {
@@ -224,6 +224,12 @@
     "data_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/2024/07/01/'        # CDF data folder\n",
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20240701T011127_V01.cdf',\n",
     "                 ]\n",
+    "\n",
+    "# 20240706\n",
+    "data_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/2024/07/06/'        # CDF data folder\n",
+    "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20240706T121009_V01.cdf',\n",
+    "                  'JUICE_L1a_RPWI-HF-SID3_20240706T175202_V01.cdf',\n",
+    "                 ]\n",
     "\"\"\"\n",
     "\"\"\""
    ]
@@ -363,7 +369,7 @@
    "source": [
     "# *** Group read\n",
     "\"\"\"\n",
-    "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2023/05/23/'        # CDF data folder\n",
+    "data_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/2024/07/06/'        # CDF data folder\n",
     "data_name = 'SID3*.cdf'\n",
     "cdf_file = data_dir + data_name\n",
     "data_name_list = glob.glob(cdf_file)\n",
