--- a/JUICE-CDF-HF-SID4_sample.ipynb
+++ b/JUICE-CDF-HF-SID4_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID4 (Burst surv): L1a QL -- 2024/5/19"
+    "# JUICE RPWI HF SID4 (Burst surv): L1a QL -- 2024/7/9"
    ]
   },
   {
@@ -145,13 +145,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"\n",
     "# *** Flight data: Ver.2 ***\n",
+    "\n",
+    "\"\"\"\n",
     "# 20240126\n",
     "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2024/01/26/'        # CDF data folder\n",
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID4_20240126T113727_V01.cdf',\n",
     "                 ]\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "\n",
+    "# 202407 -- CO2\n",
+    "data_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/2024/07/06/'        # CDF data folder\n",
+    "data_name_list = ['JUICE_L1a_RPWI-HF-SID4_20240706T121439_V01.cdf',\n",
+    "                 ]"
    ]
   },
   {
@@ -926,7 +932,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
