--- a/JUICE-CDF-HF-SID7_sample.ipynb
+++ b/JUICE-CDF-HF-SID7_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID7 (PSSR3 surv): L1a QL -- 2024/5/19"
+    "# JUICE RPWI HF SID7 (PSSR3 surv): L1a QL -- 2024/7/9"
    ]
   },
   {
@@ -155,7 +155,12 @@
     "# 20240126\n",
     "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2024/01/26/'        # CDF data folder\n",
     "data_name = 'JUICE_L1a_RPWI-HF-SID7_20240126T092930_V01.cdf'\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "\n",
+    "# 202407 -- CO2\n",
+    "data_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/2024/07/06/'        # CDF data folder\n",
+    "data_name = 'JUICE_L1a_RPWI-HF-SID7_20240706T023200_V01.cdf'\n",
+    "data_name = 'JUICE_L1a_RPWI-HF-SID7_20240706T124753_V01.cdf'"
    ]
   },
   {
@@ -553,7 +558,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
